--- a/SAE201/UserControls/UserControlCréerCommande.xaml
+++ b/SAE201/UserControls/UserControlCréerCommande.xaml
@@ -5,9 +5,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SAE201.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Height="965"
     d:DesignWidth="800"
     Background="#F9F9F9"
-    mc:Ignorable="d" Height="965">
+    mc:Ignorable="d">
 
     <Grid>
         <TabControl Margin="20">
@@ -51,23 +52,23 @@
             <DataGrid.Columns>
                 <DataGridTextColumn
                     Width="2*"
-                    Binding="{Binding NomVin}"
+                    Binding="{Binding NumVin.NumVin}"
                     Header="Vin" />
                 <DataGridTextColumn
                     Width="*"
-                    Binding="{Binding PrenomClient}"
+                    Binding="{Binding NumFournisseur}"
                     Header="Fournisseur" />
                 <DataGridTextColumn
                     Width="*"
-                    Binding="{Binding NumC}"
+                    Binding="{Binding NumEmploye.NumEmploye}"
                     Header="Demandé par " />
                 <DataGridTextColumn
                     Width="*"
-                    Binding="{Binding MailClient}"
+                    Binding="{Binding DateDemande}"
                     Header="Date" />
                 <DataGridTextColumn
                     Width="*"
-                    Binding="{Binding MailClient}"
+                    Binding="{Binding Accepter}"
                     Header="Choix " />
             </DataGrid.Columns>
         </DataGrid>
@@ -90,13 +91,13 @@
         </StackPanel>
         <Button
             x:Name="butValiderCommande"
+            Margin="629,877,39,30"
             Background="#8B0000"
             BorderThickness="1"
-            Click="butValider_Click"
             Content="Valider Commande"
             Cursor="Hand"
             FontWeight="SemiBold"
             Foreground="White"
-            IsDefault="True" Margin="629,877,39,30" />
+            IsDefault="True" />
     </Grid>
 </UserControl>
