--- a/SAE201/Windows/RechercherClient.xaml
+++ b/SAE201/Windows/RechercherClient.xaml
@@ -102,8 +102,8 @@
                             x:Name="buttSupprimer"
                             Width="30"
                             Height="30"
-                            Margin="676,110,0,0"
-                            HorizontalAlignment="Left"
+                            Margin="0,110,80,0"
+                            HorizontalAlignment="Right"
                             VerticalAlignment="Top"
                             Background="#8B0000"
                             BorderBrush="#660000"
@@ -120,8 +120,8 @@
                             x:Name="buttAjouter"
                             Width="30"
                             Height="30"
-                            Margin="676,148,0,0"
-                            HorizontalAlignment="Left"
+                            Margin="0,148,80,0"
+                            HorizontalAlignment="Right"
                             VerticalAlignment="Top"
                             Background="#8B0000"
                             BorderBrush="#660000"
@@ -137,8 +137,8 @@
                             x:Name="buttEditer"
                             Width="30"
                             Height="30"
-                            Margin="676,186,0,0"
-                            HorizontalAlignment="Left"
+                            Margin="0,186,80,0"
+                            HorizontalAlignment="Right"
                             VerticalAlignment="Top"
                             Background="#8B0000"
                             BorderBrush="#660000"
