--- a/SAE201/App.xaml
+++ b/SAE201/App.xaml
@@ -3,6 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:SAE201"
-    StartupUri="UserControls/UserControlCréerCommande.xaml">
+    StartupUri="UserControls/UserControlCreerCommande.xaml">
     <Application.Resources />
 </Application>
