--- a/SAE201/UserControls/RechercherVin.xaml
+++ b/SAE201/UserControls/RechercherVin.xaml
@@ -1,13 +1,20 @@
-﻿<UserControl  x:Class="SAE201.UserControls.RechercherVin"
+﻿<UserControl x:Class="SAE201.UserControls.RechercherVin"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SAE201.UserControls"
+      xmlns:model="clr-namespace:SAE201.Model"
+      xmlns:converters="clr-namespace:SAE201.Model"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <converters:MontantToColor x:Key="MontantColorConverter" />
+    </UserControl.Resources>
+    
     <TabControl>
-        <TabItem Header="TabItem">
+        <TabItem Header="Rechercher Vin">
             <Grid Margin="20">
 
                 <StackPanel Background="#FFE5E5E5">
@@ -86,10 +93,21 @@
                 </StackPanel>
             </Grid>
         </TabItem>
-        <TabItem Header="TabItem" Margin="-2,0,2,0" Height="22" VerticalAlignment="Bottom">
+        
+                <TabItem Header="Créer Demande" Margin="-2,0,2,0" Height="22" VerticalAlignment="Bottom">
             <StackPanel>
                 <Label Content="Créer une demande" Width="730" FontSize="18" FontWeight="Bold" Margin="0,10,0,0"/>
                 <DataGrid Height="235" Width="734" Margin="0,30,0,0" ItemsSource="{Binding VinsDemande}" AutoGenerateColumns="False">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="{x:Type DataGridColumnHeader}">
+                            <Setter Property="Background" Value="#8B0000" />
+                            <Setter Property="Foreground" Value="White" />
+                            <Setter Property="FontWeight" Value="Bold" />
+                            <Setter Property="Padding" Value="8,5" />
+                            <Setter Property="BorderBrush" Value="#660000" />
+                            <Setter Property="BorderThickness" Value="0,0,1,0" />
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Vin" Binding="{Binding NomVin}" Width="450"/>
                         <DataGridTextColumn Header="Date" Binding="{Binding Date}" Width="*"/>
@@ -98,6 +116,38 @@
                 </DataGrid>
                 <Button Content="Valider la demande" Width="120" Margin="600,25,0,0" Height="25"/>
             </StackPanel>
+        </TabItem>
+        <TabItem Header="Etat demande">
+            <Grid>
+                <StackPanel>
+                    <Label Content="Etat Demande" Width="730" FontSize="18" FontWeight="Bold" Margin="0,10,0,0"></Label>
+                    <DataGrid x:Name="dgCommandes" Margin="57,30,57,124" AlternatingRowBackground="#FFF8F8" AutoGenerateColumns="False" Background="White" BorderBrush="#8B0000" BorderThickness="2" GridLinesVisibility="Horizontal" HeadersVisibility="Column" HorizontalGridLinesBrush="#E0E0E0" IsReadOnly="True" ItemsSource="{Binding LesDemandes}" RowBackground="White" Height="269">
+                        <DataGrid.ColumnHeaderStyle>
+                            <Style TargetType="{x:Type DataGridColumnHeader}">
+                                <Setter Property="Background" Value="#8B0000" />
+                                <Setter Property="Foreground" Value="White" />
+                                <Setter Property="FontWeight" Value="Bold" />
+                                <Setter Property="Padding" Value="8,5" />
+                                <Setter Property="BorderBrush" Value="#660000" />
+                                <Setter Property="BorderThickness" Value="0,0,1,0" />
+                            </Style>
+                        </DataGrid.ColumnHeaderStyle>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Width="2*" Binding="{Binding NumVin.NomVin}" Header="Vin" />
+                            <DataGridTextColumn Width="*" Binding="{Binding NumVin.NumFournisseur.NomFournisseur}" Header="Fournisseur" />
+                            <DataGridTextColumn Width="*" Binding="{Binding NumEmploye.Nom}" Header="Demandé par " />
+                            <DataGridTextColumn Width="*" Binding="{Binding DateDemande}" Header="Date" />
+                            <DataGridTextColumn Width="*" Binding="{Binding Accepter}" Header="Choix ">
+                                <DataGridTextColumn.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Setter Property="Foreground" Value="{Binding Accepter, Converter={StaticResource MontantColorConverter}}" />
+                                    </Style>
+                                </DataGridTextColumn.CellStyle>
+                            </DataGridTextColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </StackPanel>
+            </Grid>
         </TabItem>
     </TabControl>
 </UserControl>
