alignement correct + euro au lieu de dollar

--- a/SAE201/UserControls/RechercherVin.xaml
+++ b/SAE201/UserControls/RechercherVin.xaml
@@ -183,7 +183,7 @@
                                                     HorizontalAlignment="Center"
                                                     FontWeight="Bold"
                                                     Foreground="#5C6AC4"
-                                                    Text="{Binding PrixVin, StringFormat='{}{0:C}'}" />
+                                                    Text="{Binding PrixVin, StringFormat=' {0:C2}', ConverterCulture='fr-FR'}" />
                                                 <Button
                                                     Width="25"
                                                     Height="25"
